add 'give' command

--- a/App.config
+++ b/App.config
@@ -6,6 +6,8 @@
     <add key="debugLevel" value ="2"/>
     <!--The time in milliseconds to wait between each sync loop-->
     <add key="syncDelay" value ="2500"/>
+    <!--Whether or not cheats should be allowed using the 'give' command-->
+    <add key="enableCheats" value ="true"/>
 
   </appSettings>
 </configuration>
