--- a/Windwaker.Multiplayer.Server/Windwaker.Multiplayer.Server.csproj
+++ b/Windwaker.Multiplayer.Server/Windwaker.Multiplayer.Server.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SuperSimpleTcp" Version="3.0.11" />
   </ItemGroup>
 
 </Project>
