--- a/Windwaker.Multiplayer.Client/Windwaker.Multiplayer.Client.csproj
+++ b/Windwaker.Multiplayer.Client/Windwaker.Multiplayer.Client.csproj
@@ -19,4 +19,18 @@
     <PackageReference Include="SuperSimpleTcp" Version="3.0.11" />
   </ItemGroup>
 
+  <Target Name="Development" AfterTargets="PostBuildEvent">
+
+    <!-- Copy application to export folder and zip it -->
+    <ItemGroup>
+      <BuildFolder Include="$(OutDir)*" />
+    </ItemGroup>
+    <PropertyGroup>
+      <ExportFolder>$(SolutionDir)Export\$(AssemblyName)</ExportFolder>
+    </PropertyGroup>
+    <Copy SourceFiles="@(BuildFolder)" DestinationFolder="$(ExportFolder)" />
+    <ZipDirectory SourceDirectory="$(OutDir)" DestinationFile="$(ExportFolder)\..\$(TargetName).zip" Overwrite="true"/>
+
+  </Target>
+
 </Project>
