Client: Persist last used server ip across sessions

--- a/Windwaker.Multiplayer.Client/Windwaker.Multiplayer.Client.csproj
+++ b/Windwaker.Multiplayer.Client/Windwaker.Multiplayer.Client.csproj
@@ -19,6 +19,21 @@
     <PackageReference Include="SuperSimpleTcp" Version="3.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
   <Target Name="Development" AfterTargets="PostBuildEvent">
 
     <!-- Copy application to export folder and zip it -->
@@ -29,7 +44,7 @@
       <ExportFolder>$(SolutionDir)Export\$(AssemblyName)</ExportFolder>
     </PropertyGroup>
     <Copy SourceFiles="@(BuildFolder)" DestinationFolder="$(ExportFolder)" />
-    <ZipDirectory SourceDirectory="$(OutDir)" DestinationFile="$(ExportFolder)\..\$(TargetName).zip" Overwrite="true"/>
+    <ZipDirectory SourceDirectory="$(OutDir)" DestinationFile="$(ExportFolder)\..\$(TargetName).zip" Overwrite="true" />
 
   </Target>
 
