--- a/Windwaker.Multiplayer.Server/Windwaker.Multiplayer.Server.csproj
+++ b/Windwaker.Multiplayer.Server/Windwaker.Multiplayer.Server.csproj
@@ -12,13 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <!--<PackageReference Include="SuperSimpleTcp" Version="3.0.11" />-->
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="SuperSimpleTcp">
-      <HintPath>..\..\BrandenEK\SuperSimpleTcp\src\SuperSimpleTcp\bin\Release\net7.0\SuperSimpleTcp.dll</HintPath>
-    </Reference>
+    <PackageReference Include="SuperSimpleTcp" Version="3.0.12" />
   </ItemGroup>
 
   <Target Name="Development" AfterTargets="PostBuildEvent">
