Client: Add ui for rest of settings

--- a/Windwaker.Multiplayer.Client/App.config
+++ b/Windwaker.Multiplayer.Client/App.config
@@ -7,8 +7,20 @@
     </configSections>
     <userSettings>
         <Windwaker.Multiplayer.Client.Properties.Settings>
-            <setting name="ServerIpPort" serializeAs="String">
-                <value>127.0.0.1:8989</value>
+            <setting name="playerName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="gameName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="serverIp" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="serverPort" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="password" serializeAs="String">
+                <value />
             </setting>
         </Windwaker.Multiplayer.Client.Properties.Settings>
     </userSettings>
