Client: Add sync settings to UI

--- a/Windwaker.Multiplayer.Client/App.config
+++ b/Windwaker.Multiplayer.Client/App.config
@@ -22,6 +22,9 @@
             <setting name="password" serializeAs="String">
                 <value />
             </setting>
+            <setting name="syncSettings" serializeAs="String">
+                <value>63</value>
+            </setting>
         </Windwaker.Multiplayer.Client.Properties.Settings>
     </userSettings>
 </configuration>
