--- a/Windwaker.Multiplayer.Client/Properties/Settings.settings
+++ b/Windwaker.Multiplayer.Client/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="password" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="syncSettings" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">63</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
