core: add base networking

--- a/Windwaker.Multiplayer.Client/Windwaker.Multiplayer.Client.csproj
+++ b/Windwaker.Multiplayer.Client/Windwaker.Multiplayer.Client.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SuperSimpleTcp" Version="3.0.13" />
   </ItemGroup>
 
 </Project>
